incredibly cooked sub module thing